# bigint

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bigint.hpp  doctest_main.cpp  test.cpp
